# frontend_samuel_tim

./: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml  sync-thesis-pdf.yml
backend/: .env  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  finance.py
backend/app/core/: settings.py
backend/app/db/: mongo.py  repositories.py
backend/app/models/: auth.py  finance.py  user.py
backend/app/services/: auth.py  jwt.py  passwords.py
public/: manifest.webmanifest
scripts/: sync-report-pdf.mjs
src/: App.tsx  content.ts  index.css  vite-env.d.ts
src/components/: About.tsx  AnomalyDetection.tsx  Contact.tsx  FinanceNetWorthStackedECharts.tsx  FinanceSankeyECharts.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Projects.tsx  ResearchTeaser.tsx  SEO.tsx  ScrollManager.tsx
src/components/finance/: CategoryManager.tsx  ExpenseLogTable.tsx  IncomeEntry.tsx  IncomeGrid.tsx  IncomeMonthMatrix.tsx  IncomeTable.tsx  MonthPicker.tsx  NetWorthManager.tsx  QuickBillEntry.tsx  RecurringBillsManager.tsx  financeFormat.ts
src/components/ui/: button.tsx
src/features/auth/: session.ts
src/features/finance/: activeStore.ts  api.ts  id.ts  offlineSync.ts  store.ts  types.ts
src/pages/: AnomalyPage.tsx  AuthPage.tsx  FinanceLogPage.tsx  FinancePage.tsx  FinanceVizPage.tsx  HomePage.tsx  ImpressumPage.tsx  __debugLocalStorageNetWorth.ts
